
[TestParseExprErrorHandling/IfElseMissingCondition - 1]
&ast.IfElseExpr{
    Cons: ast.Block{
        Stmts: []ast.Stmt{
            &ast.ExprStmt{
                Expr: &ast.IdentExpr{
                    Name: "a",
                    span: 5-6,
                },
                span: 5-6,
            },
        },
        Span: 3-8,
    },
    Alt: &ast.BlockOrExpr{
        Block: &ast.Block{
            Stmts: []ast.Stmt{
                &ast.ExprStmt{
                    Expr: &ast.IdentExpr{
                        Name: "b",
                        span: 16-17,
                    },
                    span: 16-17,
                },
            },
            Span: 14-19,
        },
    },
    span: 0-19,
}
---

[TestParseExprErrorHandling/IfElseMissingCondition - 2]
[]*parser.Error{
    &parser.Error{
        Span: 3-4,
        Message: "Expected a condition",
    },
}
---

[TestParseExprErrorHandling/IfElseMissingOpeningBraces - 1]
&ast.IfElseExpr{
    Cond: &ast.IdentExpr{
        Name: "cond",
        span: 3-7,
    },
    Cons: ast.Block{
        Span: 8-9,
    },
    span: 0-10,
}
---

[TestParseExprErrorHandling/IncompleteCall - 1]
&ast.CallExpr{
    Callee: &ast.IdentExpr{
        Name: "foo",
        span: 0-3,
    },
    Args: []ast.Expr{
        &ast.IdentExpr{
            Name: "a",
            span: 4-5,
        },
        &ast.ErrorExpr{
            span: 6-6,
        },
    },
    span: 0-6,
}
---

[TestParseExprErrorHandling/IncompleteTaggedTemplateLiteral - 1]
&ast.TaggedTemplateLitExpr{
    Tag: &ast.IdentExpr{
        Name: "foo",
        span: 0-3,
    },
    Quasis: []*ast.Quasi{
        &ast.Quasi{
            Value: "bar",
            Span: 4-7,
        },
    },
    span: 0-7,
}
---

[TestParseExprErrorHandling/MismatchedBracketsArrayLiteral - 1]
&ast.TupleExpr{
    Elems: []ast.Expr{
        &ast.LiteralExpr{
            Lit: &ast.NumLit{
                Value: 1,
                span: 1-2,
            },
            span: 1-2,
        },
        &ast.LiteralExpr{
            Lit: &ast.NumLit{
                Value: 2,
                span: 4-5,
            },
            span: 4-5,
        },
        &ast.LiteralExpr{
            Lit: &ast.NumLit{
                Value: 3,
                span: 7-8,
            },
            span: 7-8,
        },
    },
    span: 0-9,
}
---

[TestParseExprErrorHandling/IncompleteCall - 2]
[]*parser.Error{
    &parser.Error{
        Span: 6-6,
        Message: "Expected an expression",
    },
    &parser.Error{
        Span: 3-4,
        Message: "Expected a closing paren",
    },
}
---

[TestParseExprErrorHandling/MismatchedBracketsArrayLiteral - 2]
[]*parser.Error{
    &parser.Error{
        Span: 8-9,
        Message: "Expected ] but got )",
    },
}
---

[TestParseExprErrorHandling/MismatchedParens - 1]
&ast.BinaryExpr{
    Left: &ast.IdentExpr{
        Name: "a",
        span: 0-1,
    },
    Op: "*",
    Right: &ast.BinaryExpr{
        Left: &ast.IdentExpr{
            Name: "b",
            span: 5-6,
        },
        Op: "+",
        Right: &ast.IdentExpr{
            Name: "c",
            span: 9-10,
        },
        span: 5-10,
    },
    span: 0-10,
}
---

[TestParseExprErrorHandling/IfElseMissingOpeningBraces - 2]
[]*parser.Error{
    &parser.Error{
        Span: 8-9,
        Message: "Expected an opening brace",
    },
}
---

[TestParseExprErrorHandling/ExtraOperatorsInBinaryExpr - 1]
&ast.BinaryExpr{
    Left: &ast.IdentExpr{
        Name: "a",
        span: 0-1,
    },
    Op: "+",
    Right: &ast.IdentExpr{
        Name: "b",
        span: 6-7,
    },
    span: 0-7,
}
---

[TestParseExprErrorHandling/MismatchedParens - 2]
[]*parser.Error{
    &parser.Error{
        Span: 10-11,
        Message: "Expected ) but got ]",
    },
}
---

[TestParseExprErrorHandling/IncompleteBinaryExpr - 1]
&ast.BinaryExpr{
    Left: &ast.BinaryExpr{
        Left: &ast.IdentExpr{
            Name: "a",
            span: 0-1,
        },
        Op: "-",
        Right: &ast.IdentExpr{
            Name: "b",
            span: 4-5,
        },
        span: 0-5,
    },
    Op: "+",
    Right: &ast.ErrorExpr{
        span: 7-7,
    },
    span: 0-7,
}
---

[TestParseExprErrorHandling/IncompleteTemplateLiteral - 1]
&ast.TemplateLitExpr{
    Quasis: []*ast.Quasi{
        &ast.Quasi{
            Value: "foo",
            Span: 1-4,
        },
    },
    span: 0-4,
}
---

[TestParseExprErrorHandling/IncompleteTaggedTemplateLiteral - 2]
[]*parser.Error{
    &parser.Error{
        Span: 3-7,
        Message: "Expected a closing backtick",
    },
}
---

[TestParseExprErrorHandling/ParamsMissingClosingParen - 1]
&ast.FuncExpr{
    FuncSig: ast.FuncSig{
        Params: []*ast.Param{
            &ast.Param{
                Pattern: &ast.IdentPat{
                    Name: "a",
                    span: 4-5,
                },
            },
            &ast.Param{
                Pattern: &ast.InstancePat{
                    ClassName: &ast.Ident{
                        Name: "b",
                        span: 7-8,
                    },
                    Object: &ast.ObjectPat{
                        Elems: []ast.ObjPatElem{
                            &ast.ObjShorthandPat{
                                Key: &ast.Ident{
                                    Name: "a",
                                    span: 11-12,
                                },
                                span: 11-12,
                            },
                        },
                        span: 7-14,
                    },
                    span: 7-14,
                },
            },
        },
    },
    Body: &ast.Block{
        Span: 15-16,
    },
    span: 0-16,
}
---

[TestParseExprErrorHandling/MismatchedBracketsIndex - 1]
&ast.IndexExpr{
    Object: &ast.IdentExpr{
        Name: "foo",
        span: 0-3,
    },
    Index: &ast.IdentExpr{
        Name: "bar",
        span: 4-7,
    },
    span: 0-8,
}
---

[TestParseExprErrorHandling/IncompleteMember - 1]
&ast.BinaryExpr{
    Left: &ast.IdentExpr{
        Name: "a",
        span: 0-1,
    },
    Op: "+",
    Right: &ast.MemberExpr{
        Object: &ast.IdentExpr{
            Name: "b",
            span: 4-5,
        },
        Prop: &ast.Ident{
            span: 6-6,
        },
        span: 4-6,
    },
    span: 0-6,
}
---

[TestParseExprErrorHandling/IncompleteBinaryExpr - 2]
[]*parser.Error{
    &parser.Error{
        Span: 7-7,
        Message: "Expected an expression",
    },
}
---

[TestParseExprErrorHandling/ExtraOperatorsInBinaryExpr - 2]
[]*parser.Error{
    &parser.Error{
        Span: 4-5,
        Message: "Unexpected token, '*'",
    },
}
---

[TestParseExprErrorHandling/MismatchedBracketsIndex - 2]
[]*parser.Error{
    &parser.Error{
        Span: 3-4,
        Message: "Expected a closing bracket",
    },
}
---

[TestParseExprErrorHandling/IncompleteMember - 2]
[]*parser.Error{
    &parser.Error{
        Span: 5-6,
        Message: "expected an identifier after .",
    },
}
---

[TestParseExprErrorHandling/IncompleteTemplateLiteral - 2]
[]*parser.Error{
    &parser.Error{
        Span: 0-4,
        Message: "Expected a closing backtick",
    },
}
---

[TestParseExprErrorHandling/ParamsMissingClosingParen - 2]
[]*parser.Error{
    &parser.Error{
        Span: 13-14,
        Message: "Expected } but got +",
    },
    &parser.Error{
        Span: 15-16,
        Message: "Expected ) but got identifier",
    },
    &parser.Error{
        Span: 15-16,
        Message: "Expected an opening brace",
    },
}
---

[TestParseExprErrorHandling/ParamsMissingOpeningParen - 1]
&ast.FuncExpr{
    FuncSig: ast.FuncSig{
        Params: []*ast.Param{
            &ast.Param{
                Pattern: &ast.IdentPat{
                    Name: "a",
                    span: 3-4,
                },
            },
            &ast.Param{
                Pattern: &ast.IdentPat{
                    Name: "b",
                    span: 6-7,
                },
            },
        },
    },
    Body: &ast.Block{
        Stmts: []ast.Stmt{
            &ast.ExprStmt{
                Expr: &ast.BinaryExpr{
                    Left: &ast.IdentExpr{
                        Name: "a",
                        span: 11-12,
                    },
                    Op: "+",
                    Right: &ast.IdentExpr{
                        Name: "b",
                        span: 15-16,
                    },
                    span: 11-16,
                },
                span: 11-16,
            },
        },
        Span: 9-18,
    },
    span: 0-18,
}
---

[TestParseExprErrorHandling/IncompleteMemberOptChain - 1]
&ast.BinaryExpr{
    Left: &ast.IdentExpr{
        Name: "a",
        span: 0-1,
    },
    Op: "+",
    Right: &ast.MemberExpr{
        Object: &ast.IdentExpr{
            Name: "b",
            span: 4-5,
        },
        Prop: &ast.Ident{
            span: 7-7,
        },
        OptChain: true,
        span: 4-7,
    },
    span: 0-7,
}
---

[TestParseExprErrorHandling/ParamsMissingOpeningParen - 2]
[]*parser.Error{
    &parser.Error{
        Span: 3-4,
        Message: "Expected ( but got identifier",
    },
}
---

[TestParseExprErrorHandling/IncompleteMemberOptChain - 2]
[]*parser.Error{
    &parser.Error{
        Span: 5-7,
        Message: "expected an identifier after ?.",
    },
}
---

[TestParseExprErrorHandling/IncompleteElse - 1]
&ast.IfElseExpr{
    Cons: ast.Block{
        Stmts: []ast.Stmt{
            &ast.ExprStmt{
                Expr: &ast.IdentExpr{
                    Name: "a",
                    span: 5-6,
                },
                span: 5-6,
            },
        },
        Span: 3-8,
    },
    span: 0-13,
}
---

[TestParseExprErrorHandling/IncompleteElse - 2]
[]*parser.Error{
    &parser.Error{
        Span: 3-4,
        Message: "Expected a condition",
    },
    &parser.Error{
        Span: 13-13,
        Message: "Expected an if or an opening brace",
    },
}
---

[TestParseExprNoErrors/Call - 1]
&ast.CallExpr{
    Callee: &ast.IdentExpr{
        Name: "foo",
        span: 0-3,
    },
    Args: []ast.Expr{
        &ast.IdentExpr{
            Name: "a",
            span: 4-5,
        },
        &ast.IdentExpr{
            Name: "b",
            span: 7-8,
        },
        &ast.IdentExpr{
            Name: "c",
            span: 10-11,
        },
    },
    span: 0-12,
}
---

[TestParseExprNoErrors/NumberLiteralTrailingDecimal - 1]
&ast.LiteralExpr{
    Lit: &ast.NumLit{
        Value: 1,
        span: 0-2,
    },
    span: 0-2,
}
---

[TestParseExprNoErrors/Index - 1]
&ast.IndexExpr{
    Object: &ast.IdentExpr{
        Name: "a",
        span: 0-1,
    },
    Index: &ast.BinaryExpr{
        Left: &ast.IdentExpr{
            Name: "base",
            span: 2-6,
        },
        Op: "+",
        Right: &ast.IdentExpr{
            Name: "offset",
            span: 9-15,
        },
        span: 2-15,
    },
    span: 0-16,
}
---

[TestParseExprNoErrors/UnaryOps - 1]
&ast.BinaryExpr{
    Left: &ast.UnaryExpr{
        Arg: &ast.IdentExpr{
            Name: "a",
            span: 1-2,
        },
        span: 0-2,
    },
    Op: "-",
    Right: &ast.UnaryExpr{
        Op: 1,
        Arg: &ast.IdentExpr{
            Name: "b",
            span: 6-7,
        },
        span: 5-7,
    },
    span: 0-7,
}
---

[TestParseExprNoErrors/TemplateStringMultipleLines - 1]
&ast.TemplateLitExpr{
    Quasis: []*ast.Quasi{
        &ast.Quasi{
            Value: "hello\nworld",
            Span: 1-13,
        },
    },
    span: 0-13,
}
---

[TestParseExprNoErrors/TaggedTemplateStringLiteral - 1]
&ast.TaggedTemplateLitExpr{
    Tag: &ast.IdentExpr{
        Name: "gql",
        span: 0-3,
    },
    Quasis: []*ast.Quasi{
        &ast.Quasi{
            Value: "query userId { user { id } }",
            Span: 4-33,
        },
    },
    span: 0-33,
}
---

[TestParseExprNoErrors/ArrayLiteral - 1]
&ast.TupleExpr{
    Elems: []ast.Expr{
        &ast.LiteralExpr{
            Lit: &ast.NumLit{
                Value: 1,
                span: 1-2,
            },
            span: 1-2,
        },
        &ast.LiteralExpr{
            Lit: &ast.NumLit{
                Value: 2,
                span: 4-5,
            },
            span: 4-5,
        },
        &ast.LiteralExpr{
            Lit: &ast.NumLit{
                Value: 3,
                span: 7-8,
            },
            span: 7-8,
        },
    },
    span: 0-9,
}
---

[TestParseExprNoErrors/EmptyObject - 1]
&ast.ObjectExpr{
    span: 0-2,
}
---

[TestParseExprNoErrors/Member - 1]
&ast.MemberExpr{
    Object: &ast.MemberExpr{
        Object: &ast.IdentExpr{
            Name: "a",
            span: 0-1,
        },
        Prop: &ast.Ident{
            Name: "b",
            span: 2-3,
        },
        span: 0-3,
    },
    Prop: &ast.Ident{
        Name: "c",
        span: 5-6,
    },
    OptChain: true,
    span: 0-6,
}
---

[TestParseExprNoErrors/Parens - 1]
&ast.BinaryExpr{
    Left: &ast.IdentExpr{
        Name: "a",
        span: 0-1,
    },
    Op: "*",
    Right: &ast.BinaryExpr{
        Left: &ast.IdentExpr{
            Name: "b",
            span: 5-6,
        },
        Op: "+",
        Right: &ast.IdentExpr{
            Name: "c",
            span: 9-10,
        },
        span: 5-10,
    },
    span: 0-10,
}
---

[TestParseExprNoErrors/StringLiteral - 1]
&ast.LiteralExpr{
    Lit: &ast.StrLit{
        Value: "hello",
        span: 0-7,
    },
    span: 0-7,
}
---

[TestParseExprNoErrors/IndexPrecedence - 1]
&ast.BinaryExpr{
    Left: &ast.IdentExpr{
        Name: "a",
        span: 0-1,
    },
    Op: "+",
    Right: &ast.IndexExpr{
        Object: &ast.IdentExpr{
            Name: "b",
            span: 4-5,
        },
        Index: &ast.IdentExpr{
            Name: "c",
            span: 6-7,
        },
        span: 4-8,
    },
    span: 0-8,
}
---

[TestParseExprNoErrors/IfElse - 1]
&ast.IfElseExpr{
    Cond: &ast.IdentExpr{
        Name: "cond",
        span: 3-7,
    },
    Cons: ast.Block{
        Stmts: []ast.Stmt{
            &ast.ExprStmt{
                Expr: &ast.IdentExpr{
                    Name: "a",
                    span: 10-11,
                },
                span: 10-11,
            },
        },
        Span: 8-13,
    },
    Alt: &ast.BlockOrExpr{
        Block: &ast.Block{
            Stmts: []ast.Stmt{
                &ast.ExprStmt{
                    Expr: &ast.IdentExpr{
                        Name: "b",
                        span: 21-22,
                    },
                    span: 21-22,
                },
            },
            Span: 19-24,
        },
    },
    span: 0-24,
}
---

[TestParseExprNoErrors/SingleUnaryOp - 1]
&ast.UnaryExpr{
    Op: 1,
    Arg: &ast.LiteralExpr{
        Lit: &ast.NumLit{
            Value: 5,
            span: 1-2,
        },
        span: 1-2,
    },
    span: 0-2,
}
---

[TestParseExprNoErrors/NestedTemplateStringLiteral - 1]
&ast.TemplateLitExpr{
    Quasis: []*ast.Quasi{
        &ast.Quasi{
            Value: "a",
            Span: 1-4,
        },
        &ast.Quasi{
            Value: "e",
            Span: 13-15,
        },
    },
    Exprs: []ast.Expr{
        &ast.TemplateLitExpr{
            Quasis: []*ast.Quasi{
                &ast.Quasi{
                    Value: "b",
                    Span: 5-8,
                },
                &ast.Quasi{
                    Value: "d",
                    Span: 10-12,
                },
            },
            Exprs: []ast.Expr{
                &ast.IdentExpr{
                    Name: "c",
                    span: 8-9,
                },
            },
            span: 4-12,
        },
    },
    span: 0-15,
}
---

[TestParseExprNoErrors/IfElseChaining - 1]
&ast.IfElseExpr{
    Cond: &ast.IdentExpr{
        Name: "cond1",
        span: 3-8,
    },
    Cons: ast.Block{
        Stmts: []ast.Stmt{
            &ast.ExprStmt{
                Expr: &ast.IdentExpr{
                    Name: "a",
                    span: 11-12,
                },
                span: 11-12,
            },
        },
        Span: 9-14,
    },
    Alt: &ast.BlockOrExpr{
        Expr: &ast.IfElseExpr{
            Cond: &ast.IdentExpr{
                Name: "cond2",
                span: 23-28,
            },
            Cons: ast.Block{
                Stmts: []ast.Stmt{
                    &ast.ExprStmt{
                        Expr: &ast.IdentExpr{
                            Name: "b",
                            span: 31-32,
                        },
                        span: 31-32,
                    },
                },
                Span: 29-34,
            },
            Alt: &ast.BlockOrExpr{
                Block: &ast.Block{
                    Stmts: []ast.Stmt{
                        &ast.ExprStmt{
                            Expr: &ast.IdentExpr{
                                Name: "c",
                                span: 42-43,
                            },
                            span: 42-43,
                        },
                    },
                    Span: 40-45,
                },
            },
            span: 19-45,
        },
    },
    span: 0-45,
}
---

[TestParseExprNoErrors/NumberLiteral - 1]
&ast.LiteralExpr{
    Lit: &ast.NumLit{
        Value: 5,
        span: 0-1,
    },
    span: 0-1,
}
---

[TestParseExprNoErrors/AddSub - 1]
&ast.BinaryExpr{
    Left: &ast.BinaryExpr{
        Left: &ast.IdentExpr{
            Name: "a",
            span: 0-1,
        },
        Op: "-",
        Right: &ast.IdentExpr{
            Name: "b",
            span: 4-5,
        },
        span: 0-5,
    },
    Op: "+",
    Right: &ast.IdentExpr{
        Name: "c",
        span: 8-9,
    },
    span: 0-9,
}
---

[TestParseExprNoErrors/NumberLiteralDecimal - 1]
&ast.LiteralExpr{
    Lit: &ast.NumLit{
        Value: 1.5,
        span: 0-3,
    },
    span: 0-3,
}
---

[TestParseExprNoErrors/CurriedCall - 1]
&ast.CallExpr{
    Callee: &ast.CallExpr{
        Callee: &ast.CallExpr{
            Callee: &ast.IdentExpr{
                Name: "foo",
                span: 0-3,
            },
            Args: []ast.Expr{
                &ast.IdentExpr{
                    Name: "a",
                    span: 4-5,
                },
            },
            span: 0-6,
        },
        Args: []ast.Expr{
            &ast.IdentExpr{
                Name: "b",
                span: 7-8,
            },
        },
        span: 0-9,
    },
    Args: []ast.Expr{
        &ast.IdentExpr{
            Name: "c",
            span: 10-11,
        },
    },
    span: 0-12,
}
---

[TestParseExprNoErrors/OptChainIndex - 1]
&ast.IndexExpr{
    Object: &ast.IdentExpr{
        Name: "a",
        span: 0-1,
    },
    Index: &ast.BinaryExpr{
        Left: &ast.IdentExpr{
            Name: "base",
            span: 3-7,
        },
        Op: "+",
        Right: &ast.IdentExpr{
            Name: "offset",
            span: 10-16,
        },
        span: 3-16,
    },
    OptChain: true,
    span: 0-17,
}
---

[TestParseExprNoErrors/MulDiv - 1]
&ast.BinaryExpr{
    Left: &ast.BinaryExpr{
        Left: &ast.IdentExpr{
            Name: "a",
            span: 0-1,
        },
        Op: "/",
        Right: &ast.IdentExpr{
            Name: "b",
            span: 4-5,
        },
        span: 0-5,
    },
    Op: "*",
    Right: &ast.IdentExpr{
        Name: "c",
        span: 8-9,
    },
    span: 0-9,
}
---

[TestParseExprNoErrors/MulAdd - 1]
&ast.BinaryExpr{
    Left: &ast.BinaryExpr{
        Left: &ast.IdentExpr{
            Name: "a",
            span: 0-1,
        },
        Op: "*",
        Right: &ast.IdentExpr{
            Name: "b",
            span: 4-5,
        },
        span: 0-5,
    },
    Op: "+",
    Right: &ast.BinaryExpr{
        Left: &ast.IdentExpr{
            Name: "c",
            span: 8-9,
        },
        Op: "*",
        Right: &ast.IdentExpr{
            Name: "d",
            span: 12-13,
        },
        span: 8-13,
    },
    span: 0-13,
}
---

[TestParseExprNoErrors/TemplateStringLiteralWithExprs - 1]
&ast.TemplateLitExpr{
    Quasis: []*ast.Quasi{
        &ast.Quasi{
            Value: "hello ",
            Span: 1-9,
        },
        &ast.Quasi{
            Span: 14-15,
        },
    },
    Exprs: []ast.Expr{
        &ast.IdentExpr{
            Name: "name",
            span: 9-13,
        },
    },
    span: 0-15,
}
---

[TestParseExprNoErrors/MemberPrecedence - 1]
&ast.BinaryExpr{
    Left: &ast.IdentExpr{
        Name: "a",
        span: 0-1,
    },
    Op: "+",
    Right: &ast.MemberExpr{
        Object: &ast.IdentExpr{
            Name: "b",
            span: 4-5,
        },
        Prop: &ast.Ident{
            Name: "c",
            span: 6-7,
        },
        span: 4-7,
    },
    span: 0-7,
}
---

[TestParseExprNoErrors/CallPrecedence - 1]
&ast.BinaryExpr{
    Left: &ast.IdentExpr{
        Name: "a",
        span: 0-1,
    },
    Op: "+",
    Right: &ast.CallExpr{
        Callee: &ast.IdentExpr{
            Name: "foo",
            span: 4-7,
        },
        Args: []ast.Expr{
            &ast.IdentExpr{
                Name: "b",
                span: 8-9,
            },
        },
        span: 4-10,
    },
    span: 0-10,
}
---

[TestParseExprNoErrors/TemplateStringLiteralWithMultipleExprs - 1]
&ast.TemplateLitExpr{
    Quasis: []*ast.Quasi{
        &ast.Quasi{
            Value: "a",
            Span: 1-4,
        },
        &ast.Quasi{
            Value: "c",
            Span: 6-9,
        },
        &ast.Quasi{
            Value: "e",
            Span: 11-13,
        },
    },
    Exprs: []ast.Expr{
        &ast.IdentExpr{
            Name: "b",
            span: 4-5,
        },
        &ast.IdentExpr{
            Name: "d",
            span: 9-10,
        },
    },
    span: 0-13,
}
---

[TestParseExprNoErrors/Addition - 1]
&ast.BinaryExpr{
    Left: &ast.IdentExpr{
        Name: "a",
        span: 0-1,
    },
    Op: "+",
    Right: &ast.IdentExpr{
        Name: "b",
        span: 4-5,
    },
    span: 0-5,
}
---

[TestParseExprNoErrors/OptChainCall - 1]
&ast.CallExpr{
    Callee: &ast.IdentExpr{
        Name: "foo",
        span: 0-3,
    },
    Args: []ast.Expr{
        &ast.IdentExpr{
            Name: "bar",
            span: 5-8,
        },
    },
    OptChain: true,
    span: 0-9,
}
---

[TestParseExprNoErrors/NumberLiteralLeadingDecimal - 1]
&ast.LiteralExpr{
    Lit: &ast.NumLit{
        Value: 0.5,
        span: 0-2,
    },
    span: 0-2,
}
---

[TestParseExprNoErrors/MultipleIndexes - 1]
&ast.IndexExpr{
    Object: &ast.IndexExpr{
        Object: &ast.IdentExpr{
            Name: "a",
            span: 0-1,
        },
        Index: &ast.IdentExpr{
            Name: "i",
            span: 2-3,
        },
        span: 0-4,
    },
    Index: &ast.IdentExpr{
        Name: "j",
        span: 5-6,
    },
    span: 0-7,
}
---

[TestParseExprNoErrors/FuncExpr - 1]
&ast.FuncExpr{
    FuncSig: ast.FuncSig{
        Params: []*ast.Param{
            &ast.Param{
                Pattern: &ast.IdentPat{
                    Name: "a",
                    span: 4-5,
                },
            },
            &ast.Param{
                Pattern: &ast.IdentPat{
                    Name: "b",
                    span: 7-8,
                },
            },
        },
    },
    Body: &ast.Block{
        Stmts: []ast.Stmt{
            &ast.ExprStmt{
                Expr: &ast.BinaryExpr{
                    Left: &ast.IdentExpr{
                        Name: "a",
                        span: 12-13,
                    },
                    Op: "+",
                    Right: &ast.IdentExpr{
                        Name: "b",
                        span: 16-17,
                    },
                    span: 12-17,
                },
                span: 12-17,
            },
        },
        Span: 10-19,
    },
    span: 0-19,
}
---

[TestParseExprNoErrors/BasicObject - 1]
&ast.ObjectExpr{
    Elems: []ast.ObjExprElem{
        &ast.PropertyExpr{
            Name: &ast.NumLit{
                span: 2-3,
            },
            Value: &ast.LiteralExpr{
                Lit: &ast.StrLit{
                    Value: "hello",
                    span: 5-12,
                },
                span: 5-12,
            },
            span: 2-12,
        },
        &ast.PropertyExpr{
            Name: &ast.IdentExpr{
                Name: "foo",
                span: 14-17,
            },
            Value: &ast.LiteralExpr{
                Lit: &ast.NumLit{
                    Value: 5,
                    span: 19-20,
                },
                span: 19-20,
            },
            span: 14-20,
        },
        &ast.PropertyExpr{
            Name: &ast.StrLit{
                Value: "bar",
                span: 22-27,
            },
            Optional: true,
            Value: &ast.LiteralExpr{
                Lit: &ast.BoolLit{
                    Value: true,
                    span: 30-34,
                },
                span: 30-34,
            },
            span: 22-34,
        },
        &ast.PropertyExpr{
            Name: &ast.IdentExpr{
                Name: "baz",
                span: 36-39,
            },
            span: 36-39,
        },
        &ast.PropertyExpr{
            Name: &ast.ComputedKey{
                Expr: &ast.IdentExpr{
                    Name: "qux",
                    span: 42-45,
                },
            },
            Value: &ast.LiteralExpr{
                Lit: &ast.BoolLit{
                    span: 48-53,
                },
                span: 48-53,
            },
            span: 42-53,
        },
    },
    span: 0-55,
}
---

[TestParseExprErrorHandling/ObjectMissingComma - 1]
&ast.TypeCastExpr{
    Expr: &ast.ObjectExpr{
        Elems: []ast.ObjExprElem{
            &ast.PropertyExpr{
                Name: &ast.IdentExpr{
                    Name: "foo",
                    span: 2-5,
                },
                Value: &ast.LiteralExpr{
                    Lit: &ast.NumLit{
                        Value: 5,
                        span: 7-8,
                    },
                    span: 7-8,
                },
                span: 2-8,
            },
        },
        span: 0-12,
    },
    TypeAnn: &ast.LitTypeAnn{
        Lit: &ast.NumLit{
            Value: 10,
            span: 14-16,
        },
        span: 14-16,
    },
    span: 0-16,
}
---

[TestParseExprErrorHandling/ObjectMissingComma - 2]
[]*parser.Error{
    &parser.Error{
        Span: 9-12,
        Message: "Expected } but got identifier",
    },
}
---

[TestParseExprErrorHandling/ObjectMissingColon - 1]
&ast.ObjectExpr{
    Elems: []ast.ObjExprElem{
        &ast.PropertyExpr{
            Name: &ast.IdentExpr{
                Name: "foo",
                span: 2-5,
            },
            Value: &ast.LiteralExpr{
                Lit: &ast.NumLit{
                    Value: 5,
                    span: 6-7,
                },
                span: 6-7,
            },
            span: 2-5,
        },
        &ast.PropertyExpr{
            Name: &ast.IdentExpr{
                Name: "bar",
                span: 9-12,
            },
            Value: &ast.LiteralExpr{
                Lit: &ast.NumLit{
                    Value: 10,
                    span: 14-16,
                },
                span: 14-16,
            },
            span: 9-16,
        },
    },
    span: 0-18,
}
---

[TestParseExprErrorHandling/ObjectMissingColon - 2]
[]*parser.Error{
    &parser.Error{
        Span: 6-7,
        Message: "Expected a comma or closing brace",
    },
}
---

[TestParseExprNoErrors/LessThanEqual - 1]
&ast.BinaryExpr{
    Left: &ast.IdentExpr{
        Name: "a",
        span: 0-1,
    },
    Op: "<=",
    Right: &ast.IdentExpr{
        Name: "b",
        span: 5-6,
    },
    span: 0-6,
}
---

[TestParseExprNoErrors/GreaterThan - 1]
&ast.BinaryExpr{
    Left: &ast.IdentExpr{
        Name: "a",
        span: 0-1,
    },
    Op: ">",
    Right: &ast.IdentExpr{
        Name: "b",
        span: 4-5,
    },
    span: 0-5,
}
---

[TestParseExprNoErrors/GreaterThanEqual - 1]
&ast.BinaryExpr{
    Left: &ast.IdentExpr{
        Name: "a",
        span: 0-1,
    },
    Op: ">=",
    Right: &ast.IdentExpr{
        Name: "b",
        span: 5-6,
    },
    span: 0-6,
}
---

[TestParseExprNoErrors/LessThan - 1]
&ast.BinaryExpr{
    Left: &ast.IdentExpr{
        Name: "a",
        span: 0-1,
    },
    Op: "<",
    Right: &ast.IdentExpr{
        Name: "b",
        span: 4-5,
    },
    span: 0-5,
}
---

[TestParseExprNoErrors/NotEqual - 1]
&ast.BinaryExpr{
    Left: &ast.IdentExpr{
        Name: "a",
        span: 0-1,
    },
    Op: "!=",
    Right: &ast.IdentExpr{
        Name: "b",
        span: 5-6,
    },
    span: 0-6,
}
---

[TestParseExprNoErrors/Equal - 1]
&ast.BinaryExpr{
    Left: &ast.IdentExpr{
        Name: "a",
        span: 0-1,
    },
    Op: "==",
    Right: &ast.IdentExpr{
        Name: "b",
        span: 5-6,
    },
    span: 0-6,
}
---

[TestParseExprNoErrors/FuncCall - 1]
&ast.CallExpr{
    Callee: &ast.IdentExpr{
        Name: "foo",
        span: 0-3,
    },
    span: 0-5,
}
---

[TestParseExprNoErrors/ObjectWithSpreads - 1]
&ast.ObjectExpr{
    Elems: []ast.ObjExprElem{
        &ast.PropertyExpr{
            Name: &ast.IdentExpr{
                Name: "a",
                span: 1-2,
            },
            span: 1-2,
        },
        &ast.ObjSpreadExpr{
            Value: &ast.IdentExpr{
                Name: "b",
                span: 7-8,
            },
            span: 4-8,
        },
        &ast.ObjSpreadExpr{
            Value: &ast.ObjectExpr{
                Elems: []ast.ObjExprElem{
                    &ast.PropertyExpr{
                        Name: &ast.IdentExpr{
                            Name: "c",
                            span: 14-15,
                        },
                        span: 14-15,
                    },
                    &ast.PropertyExpr{
                        Name: &ast.IdentExpr{
                            Name: "d",
                            span: 17-18,
                        },
                        span: 17-18,
                    },
                },
                span: 13-19,
            },
            span: 10-19,
        },
    },
    span: 0-20,
}
---

[TestParseExprNoErrors/MethodCall - 1]
&ast.BinaryExpr{
    Left: &ast.CallExpr{
        Callee: &ast.MemberExpr{
            Object: &ast.IdentExpr{
                Name: "foo",
                span: 0-3,
            },
            Prop: &ast.Ident{
                Name: "bar",
                span: 4-7,
            },
            span: 0-7,
        },
        span: 0-9,
    },
    Op: "/",
    Right: &ast.IdentExpr{
        Name: "baz",
        span: 10-13,
    },
    span: 0-13,
}
---

[TestParseExprNoErrors/RegexLiteral - 1]
&ast.LiteralExpr{
    Lit: &ast.RegexLit{
        Value: "/hello/gi",
        span: 0-9,
    },
    span: 0-9,
}
---

[TestParseExprNoErrors/Concatenation - 1]
&ast.BinaryExpr{
    Left: &ast.IdentExpr{
        Name: "a",
        span: 0-1,
    },
    Op: "++",
    Right: &ast.IdentExpr{
        Name: "b",
        span: 5-6,
    },
    span: 0-6,
}
---

[TestParseExprNoErrors/MatchBasic - 1]
&ast.MatchExpr{
    Target: &ast.IdentExpr{
        Name: "x",
        span: 6-7,
    },
    Cases: []*ast.MatchCase{
        &ast.MatchCase{
            Pattern: &ast.LitPat{
                Lit: &ast.NumLit{
                    Value: 1,
                },
                span: 10-11,
            },
            Body: ast.BlockOrExpr{
                Expr: &ast.LiteralExpr{
                    Lit: &ast.StrLit{
                        Value: "one",
                        span: 15-20,
                    },
                    span: 15-20,
                },
            },
            span: 9-20,
        },
        &ast.MatchCase{
            Pattern: &ast.LitPat{
                Lit: &ast.NumLit{
                    Value: 2,
                },
                span: 22-23,
            },
            Body: ast.BlockOrExpr{
                Expr: &ast.LiteralExpr{
                    Lit: &ast.StrLit{
                        Value: "two",
                        span: 27-32,
                    },
                    span: 27-32,
                },
            },
            span: 21-32,
        },
    },
    span: 0-34,
}
---

[TestParseExprNoErrors/MatchComplex - 1]
&ast.MatchExpr{
    Target: &ast.IdentExpr{
        Name: "result",
        span: 6-12,
    },
    Cases: []*ast.MatchCase{
        &ast.MatchCase{
            Pattern: &ast.ExtractorPat{
                Name: &ast.Ident{
                    Name: "Some",
                    span: 15-19,
                },
                Args: []ast.Pat{
                    &ast.IdentPat{
                        Name: "value",
                        span: 20-25,
                    },
                },
                span: 15-26,
            },
            Guard: &ast.BinaryExpr{
                Left: &ast.IdentExpr{
                    Name: "value",
                    span: 30-35,
                },
                Op: ">",
                Right: &ast.LiteralExpr{
                    Lit: &ast.NumLit{
                        span: 38-39,
                    },
                    span: 38-39,
                },
                span: 30-39,
            },
            Body: ast.BlockOrExpr{
                Expr: &ast.IdentExpr{
                    Name: "value",
                    span: 43-48,
                },
            },
            span: 14-48,
        },
        &ast.MatchCase{
            Pattern: &ast.ExtractorPat{
                Name: &ast.Ident{
                    Name: "Some",
                    span: 50-54,
                },
                Args: []ast.Pat{
                    &ast.WildcardPat{
                        span: 55-56,
                    },
                },
                span: 50-57,
            },
            Body: ast.BlockOrExpr{
                Expr: &ast.LiteralExpr{
                    Lit: &ast.NumLit{
                        span: 61-62,
                    },
                    span: 61-62,
                },
            },
            span: 49-62,
        },
        &ast.MatchCase{
            Pattern: &ast.IdentPat{
                Name: "None",
                span: 64-68,
            },
            Body: ast.BlockOrExpr{
                Expr: &ast.UnaryExpr{
                    Op: 1,
                    Arg: &ast.LiteralExpr{
                        Lit: &ast.NumLit{
                            Value: 1,
                            span: 73-74,
                        },
                        span: 73-74,
                    },
                    span: 72-74,
                },
            },
            span: 63-74,
        },
    },
    span: 0-76,
}
---

[TestParseExprNoErrors/MatchWithPatterns - 1]
&ast.MatchExpr{
    Target: &ast.IdentExpr{
        Name: "value",
        span: 6-11,
    },
    Cases: []*ast.MatchCase{
        &ast.MatchCase{
            Pattern: &ast.ObjectPat{
                Elems: []ast.ObjPatElem{
                    &ast.ObjShorthandPat{
                        Key: &ast.Ident{
                            Name: "name",
                            span: 15-19,
                        },
                        span: 15-19,
                    },
                },
                span: 14-20,
            },
            Body: ast.BlockOrExpr{
                Expr: &ast.IdentExpr{
                    Name: "name",
                    span: 24-28,
                },
            },
            span: 13-28,
        },
        &ast.MatchCase{
            Pattern: &ast.TuplePat{
                Elems: []ast.Pat{
                    &ast.IdentPat{
                        Name: "first",
                        span: 31-36,
                    },
                    &ast.RestPat{
                        Pattern: &ast.IdentPat{
                            Name: "rest",
                            span: 41-45,
                        },
                        span: 38-45,
                    },
                },
                span: 30-46,
            },
            Body: ast.BlockOrExpr{
                Expr: &ast.IdentExpr{
                    Name: "first",
                    span: 50-55,
                },
            },
            span: 29-55,
        },
        &ast.MatchCase{
            Pattern: &ast.WildcardPat{
                span: 57-58,
            },
            Body: ast.BlockOrExpr{
                Expr: &ast.LiteralExpr{
                    Lit: &ast.NullLit{
                        span: 62-66,
                    },
                    span: 62-66,
                },
            },
            span: 56-66,
        },
    },
    span: 0-68,
}
---

[TestParseExprNoErrors/MatchWithGuard - 1]
&ast.MatchExpr{
    Target: &ast.IdentExpr{
        Name: "x",
        span: 6-7,
    },
    Cases: []*ast.MatchCase{
        &ast.MatchCase{
            Pattern: &ast.TuplePat{
                Elems: []ast.Pat{
                    &ast.IdentPat{
                        Name: "a",
                        span: 11-12,
                    },
                    &ast.IdentPat{
                        Name: "b",
                        span: 14-15,
                    },
                },
                span: 10-16,
            },
            Guard: &ast.BinaryExpr{
                Left: &ast.IdentExpr{
                    Name: "a",
                    span: 20-21,
                },
                Op: ">",
                Right: &ast.IdentExpr{
                    Name: "b",
                    span: 24-25,
                },
                span: 20-25,
            },
            Body: ast.BlockOrExpr{
                Expr: &ast.LiteralExpr{
                    Lit: &ast.StrLit{
                        Value: "first is greater",
                        span: 29-47,
                    },
                    span: 29-47,
                },
            },
            span: 9-47,
        },
    },
    span: 0-49,
}
---

[TestParseExprNoErrors/MatchWithBlock - 1]
&ast.MatchExpr{
    Target: &ast.IdentExpr{
        Name: "x",
        span: 6-7,
    },
    Cases: []*ast.MatchCase{
        &ast.MatchCase{
            Pattern: &ast.WildcardPat{
                span: 10-11,
            },
            Body: ast.BlockOrExpr{
                Block: &ast.Block{
                    Stmts: []ast.Stmt{
                        &ast.ExprStmt{
                            Expr: &ast.CallExpr{
                                Callee: &ast.MemberExpr{
                                    Object: &ast.IdentExpr{
                                        Name: "console",
                                        span: 19-26,
                                    },
                                    Prop: &ast.Ident{
                                        Name: "log",
                                        span: 27-30,
                                    },
                                    span: 19-30,
                                },
                                Args: []ast.Expr{
                                    &ast.IdentExpr{
                                        Name: "x",
                                        span: 31-32,
                                    },
                                },
                                span: 19-33,
                            },
                            span: 19-33,
                        },
                        &ast.ExprStmt{
                            Expr: &ast.LiteralExpr{
                                Lit: &ast.StrLit{
                                    Value: "unknown",
                                    span: 36-45,
                                },
                                span: 36-45,
                            },
                            span: 36-45,
                        },
                    },
                    Span: 15-47,
                },
            },
            span: 9-47,
        },
    },
    span: 0-49,
}
---

[TestParseExprErrorHandling/MatchMissingOpeningBrace - 1]
&ast.MatchExpr{
    Target: &ast.IdentExpr{
        Name: "x",
        span: 6-7,
    },
    span: 0-12,
}
---

[TestParseExprErrorHandling/MatchMissingPattern - 1]
&ast.MatchExpr{
    Target: &ast.IdentExpr{
        Name: "x",
        span: 6-7,
    },
    span: 0-12,
}
---

[TestParseExprErrorHandling/MatchMissingOpeningBrace - 2]
[]*parser.Error{
    &parser.Error{
        Span: 8-9,
        Message: "Expected { but got number",
    },
    &parser.Error{
        Span: 10-12,
        Message: "Expected a pattern",
    },
    &parser.Error{
        Span: 10-12,
        Message: "Expected pattern in match case",
    },
    &parser.Error{
        Span: 10-12,
        Message: "Expected } but got =>",
    },
}
---

[TestParseExprErrorHandling/MatchMissingTarget - 1]
&ast.MatchExpr{
    Target: &ast.ObjectExpr{
        span: 6-12,
    },
    span: 0-20,
}
---

[TestParseExprErrorHandling/MatchMissingPattern - 2]
[]*parser.Error{
    &parser.Error{
        Span: 10-12,
        Message: "Expected a pattern",
    },
    &parser.Error{
        Span: 10-12,
        Message: "Expected pattern in match case",
    },
    &parser.Error{
        Span: 10-12,
        Message: "Expected } but got =>",
    },
}
---

[TestParseExprErrorHandling/MatchMissingClosingBrace - 1]
&ast.MatchExpr{
    Target: &ast.IdentExpr{
        Name: "x",
        span: 6-7,
    },
    Cases: []*ast.MatchCase{
        &ast.MatchCase{
            Pattern: &ast.LitPat{
                Lit: &ast.NumLit{
                    Value: 1,
                },
                span: 10-11,
            },
            Body: ast.BlockOrExpr{
                Expr: &ast.LiteralExpr{
                    Lit: &ast.StrLit{
                        Value: "one",
                        span: 15-20,
                    },
                    span: 15-20,
                },
            },
            span: 9-20,
        },
    },
    span: 0-20,
}
---

[TestParseExprErrorHandling/MatchMissingTarget - 2]
[]*parser.Error{
    &parser.Error{
        Span: 10-12,
        Message: "Expected a comma or closing brace",
    },
    &parser.Error{
        Span: 10-12,
        Message: "Expected } but got =>",
    },
    &parser.Error{
        Span: 13-18,
        Message: "Expected { but got string",
    },
}
---

[TestParseExprErrorHandling/MatchMissingClosingBrace - 2]
[]*parser.Error{
    &parser.Error{
        Span: 20-20,
        Message: "Expected } but got ",
    },
}
---

[TestParseExprErrorHandling/MatchMissingBody - 1]
&ast.MatchExpr{
    Target: &ast.IdentExpr{
        Name: "x",
        span: 6-7,
    },
    Cases: []*ast.MatchCase{
        &ast.MatchCase{
            Pattern: &ast.LitPat{
                Lit: &ast.NumLit{
                    Value: 1,
                },
                span: 10-11,
            },
            Body: ast.BlockOrExpr{
                Expr: &ast.ErrorExpr{
                    span: 15-16,
                },
            },
            span: 9-16,
        },
    },
    span: 0-16,
}
---

[TestParseExprErrorHandling/MatchMissingArrow - 1]
&ast.MatchExpr{
    Target: &ast.IdentExpr{
        Name: "x",
        span: 6-7,
    },
    Cases: []*ast.MatchCase{
        &ast.MatchCase{
            Pattern: &ast.LitPat{
                Lit: &ast.NumLit{
                    Value: 1,
                },
                span: 10-11,
            },
            Body: ast.BlockOrExpr{
                Expr: &ast.ErrorExpr{
                    span: 18-19,
                },
            },
            span: 9-19,
        },
    },
    span: 0-19,
}
---

[TestParseExprErrorHandling/MatchIncompleteGuard - 1]
&ast.MatchExpr{
    Target: &ast.IdentExpr{
        Name: "x",
        span: 6-7,
    },
    Cases: []*ast.MatchCase{
        &ast.MatchCase{
            Pattern: &ast.LitPat{
                Lit: &ast.NumLit{
                    Value: 1,
                },
                span: 10-11,
            },
            Guard: &ast.LiteralExpr{
                Lit: &ast.StrLit{
                    Value: "one",
                    span: 18-23,
                },
                span: 18-23,
            },
            Body: ast.BlockOrExpr{
                Expr: &ast.ErrorExpr{
                    span: 25-25,
                },
            },
            span: 9-25,
        },
    },
    span: 0-25,
}
---

[TestParseExprErrorHandling/MatchMissingBody - 2]
[]*parser.Error{
    &parser.Error{
        Span: 15-16,
        Message: "Expected an expression",
    },
}
---

[TestParseExprErrorHandling/MatchMissingArrow - 2]
[]*parser.Error{
    &parser.Error{
        Span: 12-17,
        Message: "Expected => but got string",
    },
    &parser.Error{
        Span: 18-19,
        Message: "Expected an expression",
    },
}
---

[TestParseExprErrorHandling/MatchIncompleteGuard - 2]
[]*parser.Error{
    &parser.Error{
        Span: 15-17,
        Message: "Unexpected token, '=>'",
    },
    &parser.Error{
        Span: 24-25,
        Message: "Expected => but got }",
    },
    &parser.Error{
        Span: 25-25,
        Message: "Expected an expression",
    },
    &parser.Error{
        Span: 25-25,
        Message: "Expected } but got ",
    },
}
---

[TestParseExprNoErrors/TryCatch - 1]
&ast.TryCatchExpr{
    Try: ast.Block{
        Stmts: []ast.Stmt{
            &ast.ExprStmt{
                Expr: &ast.CallExpr{
                    Callee: &ast.IdentExpr{
                        Name: "riskyOperation",
                        span: 6-20,
                    },
                    span: 6-22,
                },
                span: 6-22,
            },
        },
        Span: 4-24,
    },
    Catch: []*ast.MatchCase{
        &ast.MatchCase{
            Pattern: &ast.IdentPat{
                Name: "error",
                span: 33-38,
            },
            Body: ast.BlockOrExpr{
                Block: &ast.Block{
                    Stmts: []ast.Stmt{
                        &ast.ExprStmt{
                            Expr: &ast.CallExpr{
                                Callee: &ast.MemberExpr{
                                    Object: &ast.IdentExpr{
                                        Name: "console",
                                        span: 44-51,
                                    },
                                    Prop: &ast.Ident{
                                        Name: "log",
                                        span: 52-55,
                                    },
                                    span: 44-55,
                                },
                                Args: []ast.Expr{
                                    &ast.IdentExpr{
                                        Name: "error",
                                        span: 56-61,
                                    },
                                },
                                span: 44-62,
                            },
                            span: 44-62,
                        },
                    },
                    Span: 42-64,
                },
            },
            span: 32-64,
        },
    },
    span: 0-64,
}
---

[TestParseExprNoErrors/NestedTry - 1]
&ast.TryCatchExpr{
    Try: ast.Block{
        Stmts: []ast.Stmt{
            &ast.ExprStmt{
                Expr: &ast.TryCatchExpr{
                    Try: ast.Block{
                        Stmts: []ast.Stmt{
                            &ast.ExprStmt{
                                Expr: &ast.CallExpr{
                                    Callee: &ast.IdentExpr{
                                        Name: "innerOperation",
                                        span: 12-26,
                                    },
                                    span: 12-28,
                                },
                                span: 12-28,
                            },
                        },
                        Span: 10-30,
                    },
                    Catch: []*ast.MatchCase{
                        &ast.MatchCase{
                            Pattern: &ast.WildcardPat{
                                span: 39-40,
                            },
                            Body: ast.BlockOrExpr{
                                Expr: &ast.LiteralExpr{
                                    Lit: &ast.NullLit{
                                        span: 44-48,
                                    },
                                    span: 44-48,
                                },
                            },
                            span: 38-48,
                        },
                    },
                    span: 6-48,
                },
                span: 6-48,
            },
        },
        Span: 4-52,
    },
    Catch: []*ast.MatchCase{
        &ast.MatchCase{
            Pattern: &ast.IdentPat{
                Name: "outer",
                span: 61-66,
            },
            Body: ast.BlockOrExpr{
                Expr: &ast.IdentExpr{
                    Name: "outer",
                    span: 70-75,
                },
            },
            span: 60-75,
        },
    },
    span: 0-75,
}
---

[TestParseExprNoErrors/TryBasic - 1]
&ast.TryCatchExpr{
    Try: ast.Block{
        Stmts: []ast.Stmt{
            &ast.ExprStmt{
                Expr: &ast.CallExpr{
                    Callee: &ast.IdentExpr{
                        Name: "riskyOperation",
                        span: 6-20,
                    },
                    span: 6-22,
                },
                span: 6-22,
            },
        },
        Span: 4-24,
    },
    span: 0-24,
}
---

[TestParseExprNoErrors/TryCatchWithGuard - 1]
&ast.TryCatchExpr{
    Try: ast.Block{
        Stmts: []ast.Stmt{
            &ast.ExprStmt{
                Expr: &ast.CallExpr{
                    Callee: &ast.IdentExpr{
                        Name: "getValue",
                        span: 6-14,
                    },
                    span: 6-16,
                },
                span: 6-16,
            },
        },
        Span: 4-18,
    },
    Catch: []*ast.MatchCase{
        &ast.MatchCase{
            Pattern: &ast.IdentPat{
                Name: "error",
                span: 27-32,
            },
            Guard: &ast.BinaryExpr{
                Left: &ast.MemberExpr{
                    Object: &ast.IdentExpr{
                        Name: "error",
                        span: 36-41,
                    },
                    Prop: &ast.Ident{
                        Name: "code",
                        span: 42-46,
                    },
                    span: 36-46,
                },
                Op: "==",
                Right: &ast.LiteralExpr{
                    Lit: &ast.NumLit{
                        Value: 404,
                        span: 50-53,
                    },
                    span: 50-53,
                },
                span: 36-53,
            },
            Body: ast.BlockOrExpr{
                Expr: &ast.LiteralExpr{
                    Lit: &ast.StrLit{
                        Value: "Not found",
                        span: 57-68,
                    },
                    span: 57-68,
                },
            },
            span: 26-68,
        },
        &ast.MatchCase{
            Pattern: &ast.IdentPat{
                Name: "error",
                span: 70-75,
            },
            Body: ast.BlockOrExpr{
                Expr: &ast.MemberExpr{
                    Object: &ast.IdentExpr{
                        Name: "error",
                        span: 79-84,
                    },
                    Prop: &ast.Ident{
                        Name: "message",
                        span: 85-92,
                    },
                    span: 79-92,
                },
            },
            span: 69-92,
        },
    },
    span: 0-92,
}
---

[TestParseExprNoErrors/TryCatchMultipleCases - 1]
&ast.TryCatchExpr{
    Try: ast.Block{
        Stmts: []ast.Stmt{
            &ast.ExprStmt{
                Expr: &ast.CallExpr{
                    Callee: &ast.IdentExpr{
                        Name: "operation",
                        span: 6-15,
                    },
                    span: 6-17,
                },
                span: 6-17,
            },
        },
        Span: 4-19,
    },
    Catch: []*ast.MatchCase{
        &ast.MatchCase{
            Pattern: &ast.ExtractorPat{
                Name: &ast.Ident{
                    Name: "NetworkError",
                    span: 28-40,
                },
                Args: []ast.Pat{
                    &ast.IdentPat{
                        Name: "msg",
                        span: 41-44,
                    },
                },
                span: 28-45,
            },
            Body: ast.BlockOrExpr{
                Expr: &ast.BinaryExpr{
                    Left: &ast.LiteralExpr{
                        Lit: &ast.StrLit{
                            Value: "Network: ",
                            span: 49-60,
                        },
                        span: 49-60,
                    },
                    Op: "++",
                    Right: &ast.IdentExpr{
                        Name: "msg",
                        span: 64-67,
                    },
                    span: 49-67,
                },
            },
            span: 27-67,
        },
        &ast.MatchCase{
            Pattern: &ast.IdentPat{
                Name: "TimeoutError",
                span: 69-81,
            },
            Body: ast.BlockOrExpr{
                Expr: &ast.LiteralExpr{
                    Lit: &ast.StrLit{
                        Value: "Timeout",
                        span: 85-94,
                    },
                    span: 85-94,
                },
            },
            span: 68-94,
        },
        &ast.MatchCase{
            Pattern: &ast.WildcardPat{
                span: 96-97,
            },
            Body: ast.BlockOrExpr{
                Expr: &ast.LiteralExpr{
                    Lit: &ast.StrLit{
                        Value: "Unknown error",
                        span: 101-116,
                    },
                    span: 101-116,
                },
            },
            span: 95-116,
        },
    },
    span: 0-116,
}
---

[TestParseExprNoErrors/TryCatchWithBlockBody - 1]
&ast.TryCatchExpr{
    Try: ast.Block{
        Stmts: []ast.Stmt{
            &ast.ExprStmt{
                Expr: &ast.CallExpr{
                    Callee: &ast.IdentExpr{
                        Name: "complexOperation",
                        span: 6-22,
                    },
                    span: 6-24,
                },
                span: 6-24,
            },
        },
        Span: 4-26,
    },
    Catch: []*ast.MatchCase{
        &ast.MatchCase{
            Pattern: &ast.IdentPat{
                Name: "error",
                span: 35-40,
            },
            Body: ast.BlockOrExpr{
                Block: &ast.Block{
                    Stmts: []ast.Stmt{
                        &ast.ExprStmt{
                            Expr: &ast.CallExpr{
                                Callee: &ast.IdentExpr{
                                    Name: "logError",
                                    span: 48-56,
                                },
                                Args: []ast.Expr{
                                    &ast.IdentExpr{
                                        Name: "error",
                                        span: 57-62,
                                    },
                                },
                                span: 48-63,
                            },
                            span: 48-63,
                        },
                        &ast.ExprStmt{
                            Expr: &ast.LiteralExpr{
                                Lit: &ast.StrLit{
                                    Value: "Failed",
                                    span: 66-74,
                                },
                                span: 66-74,
                            },
                            span: 66-74,
                        },
                    },
                    Span: 44-76,
                },
            },
            span: 34-76,
        },
    },
    span: 0-76,
}
---

[TestParseExprErrorHandling/TryMissingOpeningBrace - 1]
&ast.TryCatchExpr{
    Try: ast.Block{
        Span: 4-11,
    },
    span: 0-11,
}
---

[TestParseExprErrorHandling/TryCatchMissingOpeningBrace - 1]
&ast.TryCatchExpr{
    Try: ast.Block{
        Stmts: []ast.Stmt{
            &ast.ExprStmt{
                Expr: &ast.CallExpr{
                    Callee: &ast.IdentExpr{
                        Name: "operation",
                        span: 6-15,
                    },
                    span: 6-17,
                },
                span: 6-17,
            },
        },
        Span: 4-19,
    },
    span: 0-19,
}
---

[TestParseExprErrorHandling/TryMissingBlock - 1]
&ast.TryCatchExpr{
    Try: ast.Block{
        Span: 3-3,
    },
    span: 0-3,
}
---

[TestParseExprErrorHandling/TryMissingOpeningBrace - 2]
[]*parser.Error{
    &parser.Error{
        Span: 4-11,
        Message: "Expected an opening brace",
    },
}
---

[TestParseExprErrorHandling/TryCatchMissingBody - 1]
&ast.TryCatchExpr{
    Try: ast.Block{
        Stmts: []ast.Stmt{
            &ast.ExprStmt{
                Expr: &ast.CallExpr{
                    Callee: &ast.IdentExpr{
                        Name: "operation",
                        span: 6-15,
                    },
                    span: 6-17,
                },
                span: 6-17,
            },
        },
        Span: 4-19,
    },
    Catch: []*ast.MatchCase{
        &ast.MatchCase{
            Pattern: &ast.IdentPat{
                Name: "error",
                span: 28-33,
            },
            Body: ast.BlockOrExpr{
                Expr: &ast.ErrorExpr{
                    span: 37-38,
                },
            },
            span: 27-38,
        },
    },
    span: 0-38,
}
---

[TestParseExprErrorHandling/TryCatchMissingOpeningBrace - 2]
[]*parser.Error{
    &parser.Error{
        Span: 26-31,
        Message: "Expected { but got identifier",
    },
    &parser.Error{
        Span: 32-34,
        Message: "Expected a pattern",
    },
    &parser.Error{
        Span: 32-34,
        Message: "Expected pattern in match case",
    },
    &parser.Error{
        Span: 32-34,
        Message: "Expected } but got =>",
    },
}
---

[TestParseExprErrorHandling/TryCatchIncompleteGuard - 1]
&ast.TryCatchExpr{
    Try: ast.Block{
        Stmts: []ast.Stmt{
            &ast.ExprStmt{
                Expr: &ast.CallExpr{
                    Callee: &ast.IdentExpr{
                        Name: "operation",
                        span: 6-15,
                    },
                    span: 6-17,
                },
                span: 6-17,
            },
        },
        Span: 4-19,
    },
    Catch: []*ast.MatchCase{
        &ast.MatchCase{
            Pattern: &ast.IdentPat{
                Name: "error",
                span: 28-33,
            },
            Guard: &ast.LiteralExpr{
                Lit: &ast.StrLit{
                    Value: "failed",
                    span: 40-48,
                },
                span: 40-48,
            },
            Body: ast.BlockOrExpr{
                Expr: &ast.ErrorExpr{
                    span: 50-50,
                },
            },
            span: 27-50,
        },
    },
    span: 0-50,
}
---

[TestParseExprErrorHandling/TryCatchMissingBody - 2]
[]*parser.Error{
    &parser.Error{
        Span: 37-38,
        Message: "Expected an expression",
    },
}
---

[TestParseExprErrorHandling/TryCatchMissingPattern - 1]
&ast.TryCatchExpr{
    Try: ast.Block{
        Stmts: []ast.Stmt{
            &ast.ExprStmt{
                Expr: &ast.CallExpr{
                    Callee: &ast.IdentExpr{
                        Name: "operation",
                        span: 6-15,
                    },
                    span: 6-17,
                },
                span: 6-17,
            },
        },
        Span: 4-19,
    },
    span: 0-19,
}
---

[TestParseExprErrorHandling/TryCatchMissingClosingBrace - 1]
&ast.TryCatchExpr{
    Try: ast.Block{
        Stmts: []ast.Stmt{
            &ast.ExprStmt{
                Expr: &ast.CallExpr{
                    Callee: &ast.IdentExpr{
                        Name: "operation",
                        span: 6-15,
                    },
                    span: 6-17,
                },
                span: 6-17,
            },
        },
        Span: 4-19,
    },
    Catch: []*ast.MatchCase{
        &ast.MatchCase{
            Pattern: &ast.IdentPat{
                Name: "error",
                span: 28-33,
            },
            Body: ast.BlockOrExpr{
                Expr: &ast.IdentExpr{
                    Name: "error",
                    span: 37-42,
                },
            },
            span: 27-42,
        },
    },
    span: 0-42,
}
---

[TestParseExprErrorHandling/TryMissingBlock - 2]
[]*parser.Error{
    &parser.Error{
        Span: 3-3,
        Message: "Expected an opening brace",
    },
}
---

[TestParseExprErrorHandling/TryCatchIncompleteGuard - 2]
[]*parser.Error{
    &parser.Error{
        Span: 37-39,
        Message: "Unexpected token, '=>'",
    },
    &parser.Error{
        Span: 49-50,
        Message: "Expected => but got }",
    },
    &parser.Error{
        Span: 50-50,
        Message: "Expected an expression",
    },
    &parser.Error{
        Span: 50-50,
        Message: "Expected } but got ",
    },
}
---

[TestParseExprErrorHandling/TryCatchMissingPattern - 2]
[]*parser.Error{
    &parser.Error{
        Span: 28-30,
        Message: "Expected a pattern",
    },
    &parser.Error{
        Span: 28-30,
        Message: "Expected pattern in match case",
    },
    &parser.Error{
        Span: 28-30,
        Message: "Expected } but got =>",
    },
}
---

[TestParseExprErrorHandling/TryCatchMissingArrow - 1]
&ast.TryCatchExpr{
    Try: ast.Block{
        Stmts: []ast.Stmt{
            &ast.ExprStmt{
                Expr: &ast.CallExpr{
                    Callee: &ast.IdentExpr{
                        Name: "operation",
                        span: 6-15,
                    },
                    span: 6-17,
                },
                span: 6-17,
            },
        },
        Span: 4-19,
    },
    Catch: []*ast.MatchCase{
        &ast.MatchCase{
            Pattern: &ast.IdentPat{
                Name: "error",
                span: 28-33,
            },
            Body: ast.BlockOrExpr{
                Expr: &ast.ErrorExpr{
                    span: 43-44,
                },
            },
            span: 27-44,
        },
    },
    span: 0-44,
}
---

[TestParseExprErrorHandling/TryCatchMissingClosingBrace - 2]
[]*parser.Error{
    &parser.Error{
        Span: 42-42,
        Message: "Expected } but got ",
    },
}
---

[TestParseExprErrorHandling/TryCatchMissingArrow - 2]
[]*parser.Error{
    &parser.Error{
        Span: 34-42,
        Message: "Expected => but got string",
    },
    &parser.Error{
        Span: 43-44,
        Message: "Expected an expression",
    },
}
---

[TestParseExprNoErrors/FuncExprWithReturnType - 1]
&ast.FuncExpr{
    FuncSig: ast.FuncSig{
        Params: []*ast.Param{
            &ast.Param{
                Pattern: &ast.IdentPat{
                    Name: "a",
                    span: 4-5,
                },
            },
            &ast.Param{
                Pattern: &ast.IdentPat{
                    Name: "b",
                    span: 7-8,
                },
            },
        },
        Return: &ast.NumberTypeAnn{
            span: 13-19,
        },
    },
    Body: &ast.Block{
        Stmts: []ast.Stmt{
            &ast.ExprStmt{
                Expr: &ast.BinaryExpr{
                    Left: &ast.IdentExpr{
                        Name: "a",
                        span: 22-23,
                    },
                    Op: "+",
                    Right: &ast.IdentExpr{
                        Name: "b",
                        span: 26-27,
                    },
                    span: 22-27,
                },
                span: 22-27,
            },
        },
        Span: 20-29,
    },
    span: 0-29,
}
---

[TestParseExprNoErrors/FuncExprWithThrows - 1]
&ast.FuncExpr{
    FuncSig: ast.FuncSig{
        Params: []*ast.Param{
            &ast.Param{
                Pattern: &ast.IdentPat{
                    Name: "a",
                    span: 4-5,
                },
            },
            &ast.Param{
                Pattern: &ast.IdentPat{
                    Name: "b",
                    span: 7-8,
                },
            },
        },
        Return: &ast.NumberTypeAnn{
            span: 13-19,
        },
        Throws: &ast.TypeRefTypeAnn{
            Name: &ast.Ident{
                Name: "Error",
                span: 27-32,
            },
            span: 27-32,
        },
    },
    Body: &ast.Block{
        Stmts: []ast.Stmt{
            &ast.ExprStmt{
                Expr: &ast.BinaryExpr{
                    Left: &ast.IdentExpr{
                        Name: "a",
                        span: 35-36,
                    },
                    Op: "+",
                    Right: &ast.IdentExpr{
                        Name: "b",
                        span: 39-40,
                    },
                    span: 35-40,
                },
                span: 35-40,
            },
        },
        Span: 33-42,
    },
    span: 0-42,
}
---

[TestParseExprNoErrors/ThrowExpression - 1]
&ast.ThrowExpr{
    Arg: &ast.CallExpr{
        Callee: &ast.IdentExpr{
            Name: "computeError",
            span: 6-18,
        },
        span: 6-20,
    },
    span: 0-20,
}
---

[TestParseExprNoErrors/ThrowVariable - 1]
&ast.ThrowExpr{
    Arg: &ast.IdentExpr{
        Name: "error",
        span: 6-11,
    },
    span: 0-11,
}
---

[TestParseExprErrorHandling/ThrowMissingExpression - 1]
&ast.ThrowExpr{
    Arg: &ast.ErrorExpr{
        span: 5-5,
    },
    span: 0-5,
}
---

[TestParseExprErrorHandling/ThrowMissingExpression - 2]
[]*parser.Error{
    &parser.Error{
        Span: 5-5,
        Message: "Expected an expression",
    },
}
---

[TestParseExprNoErrors/ThrowStringLiteral - 1]
&ast.ThrowExpr{
    Arg: &ast.LiteralExpr{
        Lit: &ast.StrLit{
            Value: "divide by zero",
            span: 6-22,
        },
        span: 6-22,
    },
    span: 0-22,
}
---

[TestParseExprNoErrors/FuncExprReturnIfElse - 1]
&ast.FuncExpr{
    FuncSig: ast.FuncSig{
        Params: []*ast.Param{
            &ast.Param{
                Pattern: &ast.IdentPat{
                    Name: "value",
                    span: 4-9,
                },
                TypeAnn: &ast.StringTypeAnn{
                    span: 11-17,
                },
            },
        },
    },
    Body: &ast.Block{
        Stmts: []ast.Stmt{
            &ast.ReturnStmt{
                Expr: &ast.IfElseExpr{
                    Cond: &ast.BinaryExpr{
                        Left: &ast.IdentExpr{
                            Name: "value",
                            span: 31-36,
                        },
                        Op: "!=",
                        Right: &ast.LiteralExpr{
                            Lit: &ast.StrLit{
                                span: 40-42,
                            },
                            span: 40-42,
                        },
                        span: 31-42,
                    },
                    Cons: ast.Block{
                        Stmts: []ast.Stmt{
                            &ast.ExprStmt{
                                Expr: &ast.IdentExpr{
                                    Name: "value",
                                    span: 45-50,
                                },
                                span: 45-50,
                            },
                        },
                        Span: 43-52,
                    },
                    Alt: &ast.BlockOrExpr{
                        Block: &ast.Block{
                            Stmts: []ast.Stmt{
                                &ast.ExprStmt{
                                    Expr: &ast.LiteralExpr{
                                        Lit: &ast.StrLit{
                                            Value: "value is empty",
                                            span: 60-76,
                                        },
                                        span: 60-76,
                                    },
                                    span: 60-76,
                                },
                            },
                            Span: 58-78,
                        },
                    },
                    span: 27-78,
                },
                span: 21-78,
            },
        },
        Span: 19-80,
    },
    span: 0-80,
}
---

[TestParseExprNoErrors/BasicObjectWithTypeAssertions - 1]
&ast.ObjectExpr{
    Elems: []ast.ObjExprElem{
        &ast.PropertyExpr{
            Name: &ast.NumLit{
                span: 2-3,
            },
            Value: &ast.TypeCastExpr{
                Expr: &ast.LiteralExpr{
                    Lit: &ast.StrLit{
                        Value: "hello",
                        span: 5-12,
                    },
                    span: 5-12,
                },
                TypeAnn: &ast.StringTypeAnn{
                    span: 13-19,
                },
                span: 5-19,
            },
            span: 2-19,
        },
        &ast.PropertyExpr{
            Name: &ast.IdentExpr{
                Name: "foo",
                span: 21-24,
            },
            Value: &ast.TypeCastExpr{
                Expr: &ast.LiteralExpr{
                    Lit: &ast.NumLit{
                        Value: 5,
                        span: 26-27,
                    },
                    span: 26-27,
                },
                TypeAnn: &ast.NumberTypeAnn{
                    span: 28-34,
                },
                span: 26-34,
            },
            span: 21-34,
        },
        &ast.PropertyExpr{
            Name: &ast.StrLit{
                Value: "bar",
                span: 36-41,
            },
            Optional: true,
            Value: &ast.TypeCastExpr{
                Expr: &ast.LiteralExpr{
                    Lit: &ast.BoolLit{
                        Value: true,
                        span: 44-48,
                    },
                    span: 44-48,
                },
                TypeAnn: &ast.BooleanTypeAnn{
                    span: 49-56,
                },
                span: 44-56,
            },
            span: 36-56,
        },
        &ast.PropertyExpr{
            Name: &ast.IdentExpr{
                Name: "baz",
                span: 58-61,
            },
            span: 58-61,
        },
        &ast.PropertyExpr{
            Name: &ast.ComputedKey{
                Expr: &ast.IdentExpr{
                    Name: "qux",
                    span: 64-67,
                },
            },
            Value: &ast.TypeCastExpr{
                Expr: &ast.LiteralExpr{
                    Lit: &ast.BoolLit{
                        span: 70-75,
                    },
                    span: 70-75,
                },
                TypeAnn: &ast.BooleanTypeAnn{
                    span: 76-83,
                },
                span: 70-83,
            },
            span: 64-83,
        },
    },
    span: 0-85,
}
---

[TestParseExprNoErrors/TypeCastChain - 1]
&ast.TypeCastExpr{
    Expr: &ast.TypeCastExpr{
        Expr: &ast.IdentExpr{
            Name: "value",
            span: 0-5,
        },
        TypeAnn: &ast.StringTypeAnn{
            span: 7-13,
        },
        span: 0-13,
    },
    TypeAnn: &ast.UnknownTypeAnn{
        span: 15-22,
    },
    span: 0-22,
}
---

[TestParseExprNoErrors/TypeCast - 1]
&ast.TypeCastExpr{
    Expr: &ast.IdentExpr{
        Name: "value",
        span: 0-5,
    },
    TypeAnn: &ast.StringTypeAnn{
        span: 7-13,
    },
    span: 0-13,
}
---

[TestParseExprNoErrors/TypeCastPrecedence - 1]
&ast.BinaryExpr{
    Left: &ast.IdentExpr{
        Name: "a",
        span: 0-1,
    },
    Op: "+",
    Right: &ast.TypeCastExpr{
        Expr: &ast.IdentExpr{
            Name: "b",
            span: 4-5,
        },
        TypeAnn: &ast.NumberTypeAnn{
            span: 7-13,
        },
        span: 4-13,
    },
    span: 0-13,
}
---

[TestParseExprNoErrors/FuncExprWithTypeParams - 1]
&ast.FuncExpr{
    FuncSig: ast.FuncSig{
        TypeParams: []*ast.TypeParam{
            &ast.TypeParam{
                Name: "T",
                span: 4-5,
            },
        },
        Params: []*ast.Param{
            &ast.Param{
                Pattern: &ast.IdentPat{
                    Name: "value",
                    span: 7-12,
                },
                TypeAnn: &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "T",
                        span: 14-15,
                    },
                    span: 14-15,
                },
            },
        },
        Return: &ast.TypeRefTypeAnn{
            Name: &ast.Ident{
                Name: "T",
                span: 20-21,
            },
            span: 20-21,
        },
    },
    Body: &ast.Block{
        Stmts: []ast.Stmt{
            &ast.ExprStmt{
                Expr: &ast.IdentExpr{
                    Name: "value",
                    span: 24-29,
                },
                span: 24-29,
            },
        },
        Span: 22-31,
    },
    span: 0-31,
}
---

[TestParseExprNoErrors/FuncExprWithMultipleTypeParams - 1]
&ast.FuncExpr{
    FuncSig: ast.FuncSig{
        TypeParams: []*ast.TypeParam{
            &ast.TypeParam{
                Name: "A",
                span: 4-5,
            },
            &ast.TypeParam{
                Name: "B",
                span: 7-8,
            },
        },
        Params: []*ast.Param{
            &ast.Param{
                Pattern: &ast.IdentPat{
                    Name: "a",
                    span: 10-11,
                },
                TypeAnn: &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "A",
                        span: 13-14,
                    },
                    span: 13-14,
                },
            },
            &ast.Param{
                Pattern: &ast.IdentPat{
                    Name: "b",
                    span: 16-17,
                },
                TypeAnn: &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "B",
                        span: 19-20,
                    },
                    span: 19-20,
                },
            },
        },
        Return: &ast.TupleTypeAnn{
            Elems: []ast.TypeAnn{
                &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "A",
                        span: 26-27,
                    },
                    span: 26-27,
                },
                &ast.TypeRefTypeAnn{
                    Name: &ast.Ident{
                        Name: "B",
                        span: 29-30,
                    },
                    span: 29-30,
                },
            },
            span: 25-31,
        },
    },
    Body: &ast.Block{
        Stmts: []ast.Stmt{
            &ast.ExprStmt{
                Expr: &ast.TupleExpr{
                    Elems: []ast.Expr{
                        &ast.IdentExpr{
                            Name: "a",
                            span: 35-36,
                        },
                        &ast.IdentExpr{
                            Name: "b",
                            span: 38-39,
                        },
                    },
                    span: 34-40,
                },
                span: 34-40,
            },
        },
        Span: 32-42,
    },
    span: 0-42,
}
---

[TestParseExprNoErrors/MatchClassInstance - 1]
&ast.MatchExpr{
    Target: &ast.IdentExpr{
        Name: "shape",
        span: 11-16,
    },
    Cases: []*ast.MatchCase{
        &ast.MatchCase{
            Pattern: &ast.InstancePat{
                ClassName: &ast.Ident{
                    Name: "Point",
                    span: 24-29,
                },
                Object: &ast.ObjectPat{
                    Elems: []ast.ObjPatElem{
                        &ast.ObjShorthandPat{
                            Key: &ast.Ident{
                                Name: "x",
                                span: 31-32,
                            },
                            span: 31-32,
                        },
                        &ast.ObjShorthandPat{
                            Key: &ast.Ident{
                                Name: "y",
                                span: 34-35,
                            },
                            span: 34-35,
                        },
                    },
                    span: 24-36,
                },
                span: 24-36,
            },
            Body: ast.BlockOrExpr{
                Expr: &ast.BinaryExpr{
                    Left: &ast.IdentExpr{
                        Name: "x",
                        span: 40-41,
                    },
                    Op: "+",
                    Right: &ast.IdentExpr{
                        Name: "y",
                        span: 44-45,
                    },
                    span: 40-45,
                },
            },
            span: 18-45,
        },
        &ast.MatchCase{
            Pattern: &ast.InstancePat{
                ClassName: &ast.Ident{
                    Name: "Circle",
                    span: 52-58,
                },
                Object: &ast.ObjectPat{
                    Elems: []ast.ObjPatElem{
                        &ast.ObjShorthandPat{
                            Key: &ast.Ident{
                                Name: "radius",
                                span: 60-66,
                            },
                            span: 60-66,
                        },
                    },
                    span: 52-67,
                },
                span: 52-67,
            },
            Body: ast.BlockOrExpr{
                Expr: &ast.BinaryExpr{
                    Left: &ast.IdentExpr{
                        Name: "radius",
                        span: 71-77,
                    },
                    Op: "*",
                    Right: &ast.LiteralExpr{
                        Lit: &ast.NumLit{
                            Value: 2,
                            span: 80-81,
                        },
                        span: 80-81,
                    },
                    span: 71-81,
                },
            },
            span: 46-81,
        },
    },
    span: 5-88,
}
---

[TestParseExprErrorHandling/ArraySpreadMissingOperand - 1]
&ast.TupleExpr{
    span: 0-5,
}
---

[TestParseExprErrorHandling/ObjectSpreadMissingOperand - 1]
&ast.ObjectExpr{
    span: 0-5,
}
---

[TestParseExprErrorHandling/ArraySpreadMissingOperand - 2]
[]*parser.Error{
    &parser.Error{
        Span: 1-4,
        Message: "Expected an expression after '...'",
    },
}
---

[TestParseExprErrorHandling/ObjectSpreadMissingOperand - 2]
[]*parser.Error{
    &parser.Error{
        Span: 1-4,
        Message: "Expected an expression after '...'",
    },
}
---

[TestParseExprErrorHandling/ObjectSpreadMissingOperandBeforeComma - 1]
&ast.ObjectExpr{
    span: 0-5,
}
---

[TestParseExprErrorHandling/ArraySpreadMissingOperandBeforeComma - 1]
&ast.TupleExpr{
    span: 0-5,
}
---

[TestParseExprErrorHandling/ObjectSpreadMissingOperandBeforeComma - 2]
[]*parser.Error{
    &parser.Error{
        Span: 1-4,
        Message: "Expected an expression after '...'",
    },
    &parser.Error{
        Span: 4-5,
        Message: "Expected } but got ,",
    },
}
---

[TestParseExprErrorHandling/ArraySpreadMissingOperandBeforeComma - 2]
[]*parser.Error{
    &parser.Error{
        Span: 1-4,
        Message: "Expected an expression after '...'",
    },
    &parser.Error{
        Span: 4-5,
        Message: "Expected ] but got ,",
    },
}
---

[TestParseExprNoErrors/YieldWithValue - 1]
&ast.YieldExpr{
    Value: &ast.LiteralExpr{
        Lit: &ast.NumLit{
            Value: 1,
            span: 6-7,
        },
        span: 6-7,
    },
    span: 0-7,
}
---

[TestParseExprNoErrors/YieldInBinaryExpr - 1]
&ast.BinaryExpr{
    Left: &ast.IdentExpr{
        Name: "x",
        span: 0-1,
    },
    Op: "+",
    Right: &ast.YieldExpr{
        Value: &ast.LiteralExpr{
            Lit: &ast.NumLit{
                Value: 1,
                span: 10-11,
            },
            span: 10-11,
        },
        span: 4-11,
    },
    span: 0-11,
}
---

[TestParseExprNoErrors/BareYield - 1]
&ast.YieldExpr{
    span: 0-5,
}
---

[TestParseExprNoErrors/YieldFromInBinaryExpr - 1]
&ast.BinaryExpr{
    Left: &ast.IdentExpr{
        Name: "x",
        span: 0-1,
    },
    Op: "+",
    Right: &ast.YieldExpr{
        Value: &ast.IdentExpr{
            Name: "items",
            span: 15-20,
        },
        IsDelegate: true,
        span: 4-20,
    },
    span: 0-20,
}
---

[TestParseExprNoErrors/YieldFrom - 1]
&ast.YieldExpr{
    Value: &ast.IdentExpr{
        Name: "items",
        span: 11-16,
    },
    IsDelegate: true,
    span: 0-16,
}
---

[TestParseExprErrorHandling/IncompleteCallMissingCloseParen - 1]
&ast.CallExpr{
    Callee: &ast.IdentExpr{
        Name: "foo",
        span: 0-3,
    },
    Args: []ast.Expr{
        &ast.IdentExpr{
            Name: "a",
            span: 4-5,
        },
        &ast.IdentExpr{
            Name: "b",
            span: 7-8,
        },
    },
    span: 0-8,
}
---

[TestParseExprErrorHandling/IncompleteCallMissingCloseParen - 2]
[]*parser.Error{
    &parser.Error{
        Span: 3-4,
        Message: "Expected a closing paren",
    },
}
---

[TestParseExprErrorHandling/IncompleteIndex - 1]
&ast.IndexExpr{
    Object: &ast.IdentExpr{
        Name: "arr",
        span: 0-3,
    },
    Index: &ast.ErrorExpr{
        span: 4-4,
    },
    span: 0-4,
}
---

[TestParseExprErrorHandling/IncompleteIndex - 2]
[]*parser.Error{
    &parser.Error{
        Span: 4-4,
        Message: "Expected an expression",
    },
    &parser.Error{
        Span: 3-4,
        Message: "Expected a closing bracket",
    },
}
---

[TestParseExprErrorHandling/ObjectSetterShorthand - 1]
&ast.ObjectExpr{
    span: 0-5,
}
---

[TestParseExprErrorHandling/ObjectSetterShorthand - 2]
[]*parser.Error{
    &parser.Error{
        Span: 2-5,
        Message: "Method shorthand is not allowed in object literals; use a class instead",
    },
    &parser.Error{
        Span: 2-5,
        Message: "Expected } but got ",
    },
}
---

[TestParseExprErrorHandling/ObjectGetterShorthand - 1]
&ast.ObjectExpr{
    span: 0-5,
}
---

[TestParseExprErrorHandling/ObjectGetterShorthand - 2]
[]*parser.Error{
    &parser.Error{
        Span: 2-5,
        Message: "Method shorthand is not allowed in object literals; use a class instead",
    },
    &parser.Error{
        Span: 2-5,
        Message: "Expected } but got ",
    },
}
---

[TestParseExprErrorHandling/ObjectMethodShorthand - 1]
&ast.ObjectExpr{
    span: 0-6,
}
---

[TestParseExprErrorHandling/ObjectMethodShorthand - 2]
[]*parser.Error{
    &parser.Error{
        Span: 5-6,
        Message: "Method shorthand is not allowed in object literals; use a class instead",
    },
    &parser.Error{
        Span: 5-6,
        Message: "Expected } but got (",
    },
}
---

[TestParseExprNoErrors/BorrowImmutable - 1]
&ast.BorrowExpr{
    Arg: &ast.IdentExpr{
        Name: "p",
        span: 1-2,
    },
    span: 0-2,
}
---

[TestParseExprNoErrors/BorrowOfCallResult - 1]
&ast.BorrowExpr{
    Arg: &ast.CallExpr{
        Callee: &ast.IdentExpr{
            Name: "getValue",
            span: 1-9,
        },
        span: 1-11,
    },
    span: 0-11,
}
---

[TestParseExprNoErrors/BorrowOfMember - 1]
&ast.BorrowExpr{
    Arg: &ast.MemberExpr{
        Object: &ast.IdentExpr{
            Name: "obj",
            span: 1-4,
        },
        Prop: &ast.Ident{
            Name: "f",
            span: 5-6,
        },
        span: 1-6,
    },
    span: 0-6,
}
---

[TestParseExprNoErrors/BorrowMutable - 1]
&ast.BorrowExpr{
    Mut: true,
    Arg: &ast.IdentExpr{
        Name: "p",
        span: 5-6,
    },
    span: 0-6,
}
---

[TestParseExprNoErrors/BorrowMutableOfMember - 1]
&ast.BorrowExpr{
    Mut: true,
    Arg: &ast.MemberExpr{
        Object: &ast.IdentExpr{
            Name: "obj",
            span: 5-8,
        },
        Prop: &ast.Ident{
            Name: "f",
            span: 9-10,
        },
        span: 5-10,
    },
    span: 0-10,
}
---

[TestParseExprNoErrors/LogicalNotOfBorrowMutable - 1]
&ast.UnaryExpr{
    Op: 2,
    Arg: &ast.BorrowExpr{
        Mut: true,
        Arg: &ast.IdentExpr{
            Name: "p",
            span: 6-7,
        },
        span: 1-7,
    },
    span: 0-7,
}
---

[TestParseExprNoErrors/UnaryMinusOfBorrow - 1]
&ast.UnaryExpr{
    Op: 1,
    Arg: &ast.BorrowExpr{
        Arg: &ast.IdentExpr{
            Name: "p",
            span: 2-3,
        },
        span: 1-3,
    },
    span: 0-3,
}
---

[TestParseExprNoErrors/BorrowBindsTighterThanPlus - 1]
&ast.BinaryExpr{
    Left: &ast.BorrowExpr{
        Arg: &ast.IdentExpr{
            Name: "a",
            span: 1-2,
        },
        span: 0-2,
    },
    Op: "+",
    Right: &ast.IdentExpr{
        Name: "b",
        span: 5-6,
    },
    span: 0-6,
}
---

[TestParseExprNoErrors/BorrowOfParenthesizedSum - 1]
&ast.BorrowExpr{
    Arg: &ast.BinaryExpr{
        Left: &ast.IdentExpr{
            Name: "a",
            span: 2-3,
        },
        Op: "+",
        Right: &ast.IdentExpr{
            Name: "b",
            span: 6-7,
        },
        span: 2-7,
    },
    span: 0-7,
}
---

[TestParseExprNoErrors/FuncExprWithThrowsAndNoReturnType - 1]
&ast.FuncExpr{
    FuncSig: ast.FuncSig{
        Params: []*ast.Param{
            &ast.Param{
                Pattern: &ast.IdentPat{
                    Name: "a",
                    span: 4-5,
                },
            },
            &ast.Param{
                Pattern: &ast.IdentPat{
                    Name: "b",
                    span: 7-8,
                },
            },
        },
        Throws: &ast.TypeRefTypeAnn{
            Name: &ast.Ident{
                Name: "Error",
                span: 17-22,
            },
            span: 17-22,
        },
    },
    Body: &ast.Block{
        Stmts: []ast.Stmt{
            &ast.ExprStmt{
                Expr: &ast.BinaryExpr{
                    Left: &ast.IdentExpr{
                        Name: "a",
                        span: 25-26,
                    },
                    Op: "+",
                    Right: &ast.IdentExpr{
                        Name: "b",
                        span: 29-30,
                    },
                    span: 25-30,
                },
                span: 25-30,
            },
        },
        Span: 23-32,
    },
    span: 0-32,
}
---

[TestParseExprErrorHandling/TryCatchEmptyMissingClosingBrace - 1]
&ast.TryCatchExpr{
    Try: ast.Block{
        Stmts: []ast.Stmt{
            &ast.ExprStmt{
                Expr: &ast.CallExpr{
                    Callee: &ast.IdentExpr{
                        Name: "operation",
                        span: 6-15,
                    },
                    span: 6-17,
                },
                span: 6-17,
            },
        },
        Span: 4-19,
    },
    span: 0-19,
}
---

[TestParseExprErrorHandling/TryCatchEmptyMissingClosingBrace - 2]
[]*parser.Error{
    &parser.Error{
        Span: 27-27,
        Message: "Expected } but got ",
    },
}
---

[TestParseExprErrorHandling/GenWithoutFn - 1]
&ast.ErrorExpr{
    span: 4-5,
}
---

[TestParseExprErrorHandling/GenWithoutFn - 2]
[]*parser.Error{
    &parser.Error{
        Span: 0-3,
        Message: "Expected 'fn' after 'gen'",
    },
    &parser.Error{
        Span: 4-5,
        Message: "Expected an expression",
    },
}
---

[TestParseExprErrorHandling/AsyncGenWithoutFn - 1]
&ast.ErrorExpr{
    span: 10-11,
}
---

[TestParseExprErrorHandling/AsyncGenWithoutFn - 2]
[]*parser.Error{
    &parser.Error{
        Span: 6-9,
        Message: "Expected 'fn' after 'async gen'",
    },
    &parser.Error{
        Span: 10-11,
        Message: "Expected an expression",
    },
}
---
